Travail sur section 3, pas fini

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
 #p1{
     font-size: 20px ;
 }
-#ul1{
+#l1{
     display: flex;
     font-size: 25px;
     list-style: none;  
@@ -83,12 +83,16 @@ body{
 }
 #sec3{
     background-color:azure;
-    border: 1px solid #6a3c3a;
+    border: 3px solid #6a3c3a;
     margin-top: 40px;
     margin-left: 100px;
     margin-right: 100px;
     margin-bottom: 20px;
     border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 
